--- a/index.html
+++ b/index.html
@@ -9,16 +9,38 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css
   ">
   <link rel="stylesheet" href="./css/main.css">
+  <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
-  <h1>Kinolar web site</h1>
+  <h1 class="text-center">Kinolar web site</h1>
   <section class="kinolar">
     <div class="container">
+      <form class="js-search-form p-4" method="get">
+        <div class="input-group">
+          <input class="js-search-form-input form-control" type="search" placeholder="Search">
+          <button class="btn btn-primary" type="submit">Search</button>
+        </div>
+      </form>
       
+      <ul class="js-movies-list movies-list">
+        <!-- <p class="text-danger">coming...</p> -->
+        <li class="js-movies-item movies-item">
+          <img class="js-movies-img" src="https://image.tmdb.org/t/p/w500/xnopI5Xtky18MPhK40cZAGAOVeV.jpg" alt="">
+          <div class="movies-box">
+            <h3 class="js-movies-title movies-title">Shazam</h3>
+            <p class="js-date date-box">1553299200</p>
+            <span class="js-genres genres-box">Action, Comedy, Fantasy</span>
+
+            <div class="d-grid">
+              <button class="btn btn-danger">More Info</button>
+            </div>
+          </div>
+        </li>
+      </ul>
     </div>
   </section>
-
-
+  
+  
   <script src="./js/films.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js
   "></script>
