--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
   <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
-  <h1 class="text-center">Kinolar web site</h1>
+  <h1 class="text-center movies-title-top">Kinolar web site</h1>
   <section class="kinolar">
     <div class="container">
-      <form class="js-search-form p-4" method="get">
+      <form class="js-search-form p-3" method="get">
         <div class="input-group">
           <input class="js-search-form-input form-control" type="search" placeholder="Search">
           <button class="btn btn-primary" type="submit">Search</button>
@@ -25,14 +25,14 @@
       <ul class="js-movies-list movies-list">
         <!-- <p class="text-danger">coming...</p> -->
         <li class="js-movies-item movies-item">
-          <img class="js-movies-img" src="https://image.tmdb.org/t/p/w500/xnopI5Xtky18MPhK40cZAGAOVeV.jpg" alt="">
+          <img class="js-movies-img movies-img" src="https://image.tmdb.org/t/p/w500/xnopI5Xtky18MPhK40cZAGAOVeV.jpg" alt="">
           <div class="movies-box">
             <h3 class="js-movies-title movies-title">Shazam</h3>
             <p class="js-date date-box">1553299200</p>
             <span class="js-genres genres-box">Action, Comedy, Fantasy</span>
-
+            
             <div class="d-grid">
-              <button class="btn btn-danger">More Info</button>
+              <button class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#exampleModal">More Info</button>
             </div>
           </div>
         </li>
@@ -40,6 +40,28 @@
     </div>
   </section>
   
+  <!-- MODAL START -->
+  <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-xl">
+      <div class="modal-content">
+        <div class="modal-body row">
+          <div class="col-6">
+            <img class="js-movies-modal-img movies-modal-img" src="https://image.tmdb.org/t/p/w500/xnopI5Xtky18MPhK40cZAGAOVeV.jpg" alt="">
+          </div>
+          <div class="col-6 bg-success p-5 rounded-2">
+            <p class="j-id-modal ms-auto">287947</p>
+            <div class="d-flex align-items-center justify-content-center">
+              <h3 class="js-movies-modal-title movies-title-modal me-2">Shazam</h3>
+              <p class="js-date date-box">1553299200</p>
+            </div>
+            <p class="about-modal-title w-75">A boy is given the ability to become an adult superhero in times of need with a single magic word.</p>
+            <span class="js-modal-genres genres-box">Action, Comedy, Fantasy</span>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- MODAL END -->
   
   <script src="./js/films.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js
