--- a/index.html
+++ b/index.html
@@ -17,49 +17,48 @@
     <div class="container">
       <form class="js-search-form p-3" method="get">
         <div class="input-group">
-          <input class="js-search-form-input form-control me-2" type="search" placeholder="Search">
-          <select class="w-25" name="" id="">
-            <option value="qwer">rgr</option>
-            <option value="qwer">rtgr</option>
-            <option value="qwer">rtgr</option>
-            <option value="qwer">rtg</option>
+          <input class="js-search-form-input form-control me-2 w-50" type="search" placeholder="Search">
+          <select class="form-select  aria-label="Default select example">
+            <option selected>Open this select menu</option>
+            <option value="1">One</option>
+            <option value="2">Two</option>
+            <option value="3">Three</option>
           </select>
-          <button class="btn btn-primary" type="submit">Search</button>
+          <button class="js-movies-btn btn btn-primary" type="submit">Search</button>
         </div>
       </form>
       
-      <ul class="js-movies-list movies-list">
-        <!-- <p class="text-danger">coming...</p> -->
+      <ul class="js-movies-list movies-list mb-5">
+        <p class="text-danger">coming...</p>
       </ul>
     </div>
   </section>
   
-
-
+  
+  
   <!-- MODAL START -->
   <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-xl">
       <div class="modal-content">
         <div class="modal-body row">
           <div class="col-6">
-            <img class="js-movies-modal-img movies-modal-img" src="https://image.tmdb.org/t/p/w500/xnopI5Xtky18MPhK40cZAGAOVeV.jpg" alt="">
+            <img class="js-movies-modal-img movies-modal-img" src="" alt="">
           </div>
           <div class="col-6 bg-success p-5 rounded-2">
-            <p class="js-id-modal ms-auto">287947</p>
             <div class="d-flex align-items-center justify-content-center">
-              <h3 class="js-movies-modal-title movies-title-modal me-2">Shazam</h3>
-              <p class="js-modal-date date-box">1553299200</p>
+              <h3 class="js-movies-modal-title movies-title-modal me-2"></h3>
+              <p class="js-modal-date date-box"></p>
             </div>
-            <p class="about-modal-title w-75">A boy is given the ability to become an adult superhero in times of need with a single magic word.</p>
-            <span class="js-modal-genres genres-box">Action, Comedy, Fantasy</span>
+            <p class="about-modal-title w-75"></p>
+            <span class="js-modal-genres genres-box"></span>
           </div>
         </div>
       </div>
     </div>
   </div>
   <!-- MODAL END -->
-
-
+  
+  
   
   <!-- KINOLAR TEMPLATE START -->
   <template class="js-movies-temp">
@@ -71,7 +70,7 @@
         <span class="js-genres genres-box"></span>
         
         <div class="d-grid">
-          <button class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#exampleModal">More Info</button>
+          <button class="js-movies-temp-btn btn btn-danger" data-bs-toggle="modal" data-bs-target="#exampleModal">More Info</button>
         </div>
       </div>
     </li>
